button spacing fix

--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -25,7 +25,7 @@
 }
 
 .buttonContainer > button {
-  margin: 0.5rem;
+  margin: 0.25rem;
   width: 10rem;
   height: 3rem;
   border: none;
